--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -39,7 +39,7 @@ jobs:
           use-public-rspm: true
           r-version: 4.1.2
 
-      - uses: r-lib/actions/setup-renv@v2
+      - uses: r-lib/actions/setup-renv@v2-branch
 
       - uses: r-lib/actions/check-r-package@v2
         with:
